--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "computational graph javascript implementation for hh-school",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc mocha"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/neuralnull/hh-graph/issues"
   },
-  "homepage": "https://github.com/neuralnull/hh-graph#readme"
+  "homepage": "https://github.com/neuralnull/hh-graph#readme",
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.4",
+    "nyc": "^11.6.0"
+  }
 }
